# pymoonraker

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: klipper-moonraker-context.mdc  pymoonraker.mdc  python-modules.mdc  yaml-schema.mdc
.cursor/skills/create-tests/: SKILL.md
.cursor/skills/generate-bindings/: SKILL.md
.cursor/skills/run-lint-format/: SKILL.md
.cursor/skills/run-testing/: SKILL.md
.cursor/skills/run-type-checking/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: getting-started.md  index.md
docs/api/: client.md  events.md  index.md  sync-client.md
docs/api/namespaces/: access.md  announcements.md  database.md  files.md  history.md  index.md  job-queue.md  machine.md  power.md  printer.md  server.md  update-manager.md  webcams.md
docs/usage/: client-lifecycle.md  common-operations.md  error-handling.md  events.md
schema/: moonraker_api.yaml
scripts/: generate_bindings.py
src/pymoonraker/: __init__.py  _compat.py  client.py  exceptions.py  sync_client.py
src/pymoonraker/api/: __init__.py  _generated.py
src/pymoonraker/auth/: __init__.py  auth.py
src/pymoonraker/events/: __init__.py  dispatcher.py  types.py
src/pymoonraker/models/: __init__.py  access.py  announcements.py  common.py  database.py  devices.py  files.py  job.py  machine.py  printer.py  server.py  update_manager.py  webcams.py
src/pymoonraker/rpc/: __init__.py  jsonrpc.py  types.py
src/pymoonraker/transport/: __init__.py  base.py  http.py  websocket.py
tests/: conftest.py  test_events.py  test_models.py  test_rpc_types.py
tests/integration/: test_live_all_routes.py  test_live_moonraker.py
tests/unit/: test_client_reconnect.py
tests/unit/api/: test_generated_bindings.py
tests/unit/events/: test_events.py
tests/unit/exceptions/: test_exceptions.py
tests/unit/models/: test_models.py  test_models_extended.py
tests/unit/rpc/: test_rpc_types.py
