[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pymoonraker"
dynamic = ["version"]
description = "Async-first, fully typed Python SDK for the Moonraker API (Klipper 3D printer firmware)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "William Tietjen" },
]
keywords = [
    "moonraker",
    "klipper",
    "3d-printing",
    "api-client",
    "async",
    "websocket",
    "json-rpc",
    "ai-agent",
    "llm-friendly",
    "cursor",
    "copilot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/thewillft/pymoonraker"
Documentation = "https://github.com/thewillft/pymoonraker#readme"
Repository = "https://github.com/thewillft/pymoonraker"
Issues = "https://github.com/thewillft/pymoonraker/issues"
Changelog = "https://github.com/thewillft/pymoonraker/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "aioresponses>=0.7",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = ["src/pymoonraker"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymoonraker"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
    "PT",   # flake8-pytest-style
    "ASYNC", # flake8-async
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-docstring-summary-second-line (conflicts with D212)
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # dynamically typed expressions (typing.Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"scripts/**" = ["ANN", "D"]

[tool.ruff.lint.isort]
known-first-party = ["pymoonraker"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "integration: marks tests requiring a live Moonraker instance",
]

[tool.coverage.run]
source = ["pymoonraker"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
